--- a/src/about.html
+++ b/src/about.html
@@ -67,20 +67,24 @@
     <!-- About Section -->
     <section id="about">
         <div class="container">
+            <div class="about-us-title">
+                關於我們
+                <p style="display: inline-block; color: #804e21;">品牌故事</p>
+            </div>
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">以古法煉製滴出千金醇滴雞精</h2>
-                        <h3 class="section-subheading text-muted">總記得小時候家裡魚池旁飼養的土雞，父母親總是要花4至6個月的時間，每天細心的照顧，
+                    <h3 class="section-subheading text-muted" style="text-align: left;">總記得小時候家裡魚池旁飼養的土雞，父母親總是要花4至6個月的時間，每天細心的照顧，
                         土雞固定時間放山運動到雞舍清洗餵食，目的就是為了給孩子們準備一碗濃純香能補充元氣
                         ，增強免疫力的滴雞精。從小到大，走進廚房，總能看到爸媽正辛苦的為家中孩子們準備滴雞精，每一滴的滴雞精，都猶如父母親對孩子的愛，就像千金般的珍貴，於是我們將這份父母親疼惜孩子的滴雞精取名為千金醇，讓這一份愛延續擴散到每個家庭。
                     </h3>
-                    <h3 class="section-subheading text-muted">
+                    <h3 class="section-subheading text-muted" style="text-align: left;">
                         我們嚴選飼養4至6個月的土公雞，以古法淬煉的技術，經隔水加熱的方式，需10小時的時
                         間來淬煉雞精，所淬煉出來的滴雞精，每一滴都是精華。
                     </h3>
                 </div>
             </div>
-            <div class="row">
+            <div class="row" style="background: #DDD8CD; padding: 40px 10px">
                 <div class="col-lg-12">
                     <ul class="timeline">
                         <li>
